--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -1,4 +1,5 @@
 input {
+    box-sizing: border-box;
     background-color: transparent;
     border-bottom: 1px solid #a9b388;
     padding: 5px 10px;
